# rs-ansible

./: .gitignore  Cargo.toml  README.md  TEMPLATE_INTEGRATION.md  TERA_GUIDE.md  TERA_QUICK_REF.md
examples/: app.conf.tera  file_copy_demo.rs  logging_example.rs  nginx.conf.tera  systemd.service.tera  template_example.rs  tera_features.rs  three_hash_demo.rs  tracing_demo.rs
src/: config.rs  error.rs  executor.rs  lib.rs  main.rs  manager.rs  ssh.rs  tests.rs  types.rs  utils.rs
src/ssh/: client.rs  file_transfer.rs  hash.rs  mod.rs  system_info.rs  template.rs  user.rs
