[package]
name = "rs-ansible"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
